--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Regina Bond's Bipt UP Service",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server"
   },
   "author": "Peter Balanesi",
   "license": "ISC",
@@ -15,5 +16,8 @@
     "express": "^4.17.1",
     "method-override": "^3.0.0",
     "morgan": "^1.10.0"
+  },
+  "engines": {
+    "node": "12.x"
   }
 }
